fixed horizontal scrolling on wider projects

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,7 +23,7 @@ body {
 }
 
 #root{
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  width: 100vw;
+  overflow: auto;
+  height: 100vh;
 }
